# Prowess

./: .dockerignore  .env  .env.example  .gitignore  .mypy.ini  Dockerfile  Prowess.py  README.md  RiotHandler.py  data_handler.py  docker-compose.yml  get_puuid.py  get_puuidv2.py  handler.py  main.tf  match_info_sample.json  package-lock.json  package.json  pyproject.toml  requirements.txt  restart_session.py  run_tests.sh  serverless.yml  terraform.tfstate  tox.ini  update_and_retrieve_data.py  update_and_retrieve_datav2.py
.github/workflows/: prowess-flow.yml
ansible/: playbook.yml
ansible/templates/: redis.service.j2
main-prowess-folder/: Analyze.py  README.md  handler.py  match_info_sample.json  package-lock.json  package.json  serverless.yml
main-prowess-folder/tests/: test_analyzing_match_data.py
src/: Analyze.py  RiotHandler.py  ValorantApi.py  api.py  api_service.py  api_utils.py  consumer.py  consumer_api.py  data_handler.py  dynamodb.py  handler.py  logger.py  match_analyzer.py  publisher.py  redis.py  requirements.txt  valorant_riot_api.py
src/static/: match_info_no_rounds.json  match_info_no_stats.json  match_info_sample2.json
src/tests/: test_analyzing_match_data.py  test_consumer.py  test_data_parsing.py
src/types/: riot.py  session_data.py
tests/: Analyzer.py  test_analyzing_match_data.py  test_consumer.py
