[tool.poetry]
name = "prowess"
version = "0.1.0"
description = ""
authors = ["Michael <strafer@strafer.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.10"
discord-handler = "0.0.5"
ratelimit = "2.2.1"
redis = "3.5.3"
requests = "2.28.2"


[tool.poetry.group.test.dependencies]
nose2 = "^0.12.0"


[tool.poetry.group.dev.dependencies]
flake8 = "5.0.4"
flake8-commas = "2.1.0"
flake8-quotes = "3.3.2"
autopep8 = "1.7.0"
fakeredis = "2.2.0"
mypy = "1.0.1"
types-redis = "4.5.1.3"
types-requests = "2.28.11.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
